# Dokat

./: .env.example  .gitignore  AGENT.md  Makefile  ONBOARDING.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.f02check.json  tsconfig.f04tmp.json  tsconfig.json
api-gateway/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api-gateway/app/: config.py  main.py
api-gateway/app/auth/: dependency.py  firebase.py  jwt_issuer.py
api-gateway/app/errors/: codes.py  handlers.py  normalizer.py
api-gateway/app/health/: __init__.py  checker.py
api-gateway/app/middleware/: logging.py  rate_limit.py  trace.py
api-gateway/app/proxy/: __init__.py  client.py  forwarder.py  headers.py
api-gateway/app/routing/: matcher.py  registry.py
api-gateway/tests/: conftest.py
api-gateway/tests/integration/: test_ai_proxy.py  test_auth.py  test_error_handlers.py  test_health.py  test_quick_auth.py  test_rate_limit_ip.py  test_rate_limit_route.py  test_rate_limit_user.py  test_routing.py  test_tracing.py  test_upstream_errors.py
api-gateway/tests/smoke/: test_docker_build.sh
api-gateway/tests/unit/: test_config.py  test_error_handlers.py  test_error_normalizer.py  test_headers.py  test_jwt_issuer.py  test_logging.py  test_rate_limit.py  test_route_matcher.py  test_trace.py
backend/: .env.example  Makefile  alembic.ini  pyproject.toml  requirements.txt
client/: .dockerignore  Dockerfile  Makefile  README.md  analysis_options.yaml  firebase.json  (+3 more)
client-rn/: App.tsx  index.js  package-lock.json  package.json
(+406 files in other folders)
